handled case when expected config values are not provided

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Gopal Raichur",
   "license": "ISC",
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=8.11.3",
+    "npm": ">=6.1.0"
   },
   "private": true,
   "devDependencies": {
