Updated package references

--- a/package.json
+++ b/package.json
@@ -14,31 +14,13 @@
   },
   "private": true,
   "devDependencies": {
+    "eslint-config-mfnode": "git+https://github.com/mobifiliallp/eslint-config-mfnode.git#semver:^1.0.0",
     "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0"
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
   },
   "eslintConfig": {
-    "extends": [
-      "airbnb"
-    ],
-    "rules": {
-      "no-underscore-dangle": "off",
-      "max-len": "off",
-      "object-shorthand": "off",
-      "prefer-destructuring": "off",
-      "no-param-reassign": "off",
-      "no-else-return": "off",
-      "no-prototype-builtins": "off",
-      "no-mixed-operators": [
-        "error",
-        {
-          "allowSamePrecedence": true
-        }
-      ]
-    }
+    "extends": "eslint-config-mfnode"
   },
   "dependencies": {
     "config": "^1.30.0",
